--- a/LocalCalibration/data/config_econds_B27v1.json
+++ b/LocalCalibration/data/config_econds_B27v1.json
@@ -1,38 +1,38 @@
 {
-  "ML-F3P-CMX004": {
-    "headerMarker": "0x154",
-    "Gain": [1, 1, 1, 1, 1, 1],
-    "characMode": 1,
-    "CalibrationSC": [1, 1, 1, 1, 1, 1]
-  },
-  "ML-F3P-CMX003": {
-    "headerMarker": "0x154",
-    "Gain": [1, 1, 1, 1, 1, 1],
-    "characMode": 1,
-    "CalibrationSC": [1, 1, 1, 1, 1, 1]
-  },  
-  "ML-F3P-TTX0003": {
-    "headerMarker": "0x154",
-    "Gain": [1, 1, 1, 1, 1, 1],
-    "characMode": 1,
-    "CalibrationSC": [1, 1, 1, 1, 1, 1]
-  },
-  "ML-F2WX-IH0011": {
-    "headerMarker": "0x154",
-    "Gain": [1, 1, 1, 1, 1, 1],
-    "characMode": 1,
-    "CalibrationSC": [1, 1, 1, 1, 1, 1]
-  },
-  "ML-F3P-TTX0001": {
-    "headerMarker": "0x154",
-    "Gain": [1, 1, 1, 1, 1, 1],
-    "characMode": 1,
-    "CalibrationSC": [1, 1, 1, 1, 1, 1]
-  },
-  "ML-F3P-TTX0002": {
-    "headerMarker": "0x154",
-    "Gain": [1, 1, 1, 1, 1, 1],
-    "characMode": 1,
-    "CalibrationSC": [1, 1, 1, 1, 1, 1]
-  }
+    "ML-F3P-CMX004": {
+	"headerMarker": "0x154",
+	"passthrough": 1,
+	"Gain": [1, 1, 1, 1, 1, 1],
+	"CalibrationSC": [1, 1, 1, 1, 1, 1]
+    },
+    "ML-F3P-CMX003": {
+	"headerMarker": "0x154",
+	"passthrough": 1,
+	"Gain": [1, 1, 1, 1, 1, 1],
+	"CalibrationSC": [1, 1, 1, 1, 1, 1]
+    },  
+    "ML-F3P-TTX0003": {
+	"headerMarker": "0x154",
+	"passthrough": 1,
+	"Gain": [1, 1, 1, 1, 1, 1],
+	"CalibrationSC": [1, 1, 1, 1, 1, 1]
+    },
+    "ML-F2WX-IH0011": {
+	"headerMarker": "0x154",
+	"passthrough": 1,
+	"Gain": [1, 1, 1, 1, 1, 1],    
+	"CalibrationSC": [1, 1, 1, 1, 1, 1]
+    },
+    "ML-F3P-TTX0001": {
+	"headerMarker": "0x154",
+	"passthrough": 1,
+	"Gain": [1, 1, 1, 1, 1, 1],
+	"CalibrationSC": [1, 1, 1, 1, 1, 1]
+    },
+    "ML-F3P-TTX0002": {
+	"headerMarker": "0x154",
+	"passthrough": 1,
+	"Gain": [1, 1, 1, 1, 1, 1],
+	"CalibrationSC": [1, 1, 1, 1, 1, 1]
+    }
 }
