Update trigger link format

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,7 @@ compilation-check:
     - cd $MY_CMSSW_REL/src/
     - cmsenv
     - git cms-merge-topic -u CMS-HGCAL:dev/hackathon_base_CMSSW_14_1_X
-    - git clone https://gitlab.cern.ch/hgcal-dpg/hgcal-comm.git HGCalCommissioning -b $CI_MERGE_REQUEST_SOURCE_BRANCH_NAME
+    - git clone $CI_MERGE_REQUEST_SOURCE_PROJECT_URL HGCalCommissioning -b $CI_MERGE_REQUEST_SOURCE_BRANCH_NAME
     - ls -ltr
     - scram b -j 8
     - scram build code-checks
