--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ default:
     - set +u && source /cvmfs/cms.cern.ch/cmsset_default.sh; set -u
     - cmssw-el9 -- cat /etc/redhat-release
     - export SCRAM_ARCH=el9_amd64_gcc12
-    - export MY_CMSSW_REL=CMSSW_15_0_0
+    - export MY_CMSSW_REL=CMSSW_15_1_0_pre1
 
 compilation-check:
   stage: Compilation check
@@ -25,7 +25,7 @@ compilation-check:
     - cmsrel $MY_CMSSW_REL
     - cd $MY_CMSSW_REL/src/
     - cmsenv
-    - git cms-merge-topic -u ywkao:hgcal-dqm_with_th2poly-13_2_X
+    - git cms-init
     - echo "git clone $CI_MERGE_REQUEST_SOURCE_PROJECT_URL HGCalCommissioning -b $CI_MERGE_REQUEST_SOURCE_BRANCH_NAME"
     - git clone $CI_MERGE_REQUEST_SOURCE_PROJECT_URL HGCalCommissioning -b $CI_MERGE_REQUEST_SOURCE_BRANCH_NAME
     - ls -ltr
